[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/CityBuilder/BuildingGrid.gd" type="Script" id=1]
[ext_resource path="res://sprites/CityBuilder/citytileset.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/CityBuilder/TileHighlight.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/CityBuilder/BuildingSelectPanel.gd" type="Script" id=4]
[ext_resource path="res://sprites/CityBuilder/assets/citybuilding5.png" type="Texture" id=5]
[ext_resource path="res://sprites/CityBuilder/assets/citybuilding1.png" type="Texture" id=6]
[ext_resource path="res://sprites/CityBuilder/assets/citybuilding6.png" type="Texture" id=7]
[ext_resource path="res://sprites/CityBuilder/assets/citybuilding2.png" type="Texture" id=8]
[ext_resource path="res://sprites/CityBuilder/assets/citybuilding4.png" type="Texture" id=9]
[ext_resource path="res://sprites/CityBuilder/assets/citybuilding3.png" type="Texture" id=10]
[ext_resource path="res://sprites/CityBuilder/UITheme.tres" type="Theme" id=11]
[ext_resource path="res://scripts/CityBuilder/TurnManager.gd" type="Script" id=12]
[ext_resource path="res://scenes/CityBuilder/WealthManager.gd" type="Script" id=13]
[ext_resource path="res://scripts/CityBuilder/TechTreeItem.gd" type="Script" id=14]
[ext_resource path="res://scripts/CityBuilder/TechManager.gd" type="Script" id=15]
[ext_resource path="res://scenes/CityBuilder/TechTreeItem.tscn" type="PackedScene" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.121569, 0.109804, 1 )

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Background" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 16 )
format = 1
tile_data = PoolIntArray( -327686, 2, 0, -327685, 2, 0, -327684, 2, 0, -327683, 2, 0, -327682, 2, 0, -327681, 2, 0, -393216, 8, 0, -393215, 1, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -262150, 2, 0, -262149, 2, 0, -262148, 2, 0, -262147, 2, 0, -262146, 2, 0, -262145, 2, 0, -327680, 8, 0, -327679, 1, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -196614, 2, 0, -196613, 2, 0, -196612, 2, 0, -196611, 2, 0, -196610, 2, 0, -196609, 2, 0, -262144, 8, 0, -262143, 1, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -131078, 2, 0, -131077, 2, 0, -131076, 2, 0, -131075, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 8, 0, -196607, 1, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -65542, 2, 0, -65541, 2, 0, -65540, 2, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 8, 0, -131071, 1, 0, -131070, 1, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 1, 0, -131065, 1, 0, -6, 2, 0, -5, 2, 0, -4, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 8, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, 65530, 9, 0, 65531, 9, 0, 65532, 9, 0, 65533, 9, 0, 65534, 9, 0, 65535, 9, 0, 0, 10, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 131066, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 8, 0, 65537, 2, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 2, 0, 65543, 2, 0, 196602, 2, 0, 196603, 2, 0, 196604, 2, 0, 196605, 3, 0, 196606, 2, 0, 196607, 2, 0, 131072, 8, 0, 131073, 2, 0, 131074, 5, 0, 131075, 5, 0, 131076, 4, 0, 131077, 5, 0, 131078, 4, 0, 131079, 4, 0, 262138, 2, 0, 262139, 2, 0, 262140, 2, 0, 262141, 3, 0, 262142, 2, 0, 262143, 2, 0, 196608, 8, 0, 196609, 2, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 327674, 2, 0, 327675, 2, 0, 327676, 2, 0, 327677, 3, 0, 327678, 3, 0, 327679, 2, 0, 262144, 8, 0, 262145, 2, 0, 262146, 4, 0, 262147, 5, 0, 262148, 4, 0, 262149, 4, 0, 262150, 5, 0, 262151, 4, 0, 393210, 2, 0, 393211, 2, 0, 393212, 3, 0, 393213, 2, 0, 393214, 2, 0, 393215, 3, 0, 327680, 8, 0, 327681, 2, 0, 327682, 4, 0, 327683, 4, 0, 327684, 5, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 458746, 2, 0, 458747, 2, 0, 458748, 2, 0, 458749, 3, 0, 458750, 3, 0, 458751, 2, 0, 393216, 8, 0, 393217, 3, 0, 393218, 4, 0, 393219, 4, 0, 393220, 5, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 524282, 2, 0, 524283, 2, 0, 524284, 2, 0, 524285, 2, 0, 524286, 2, 0, 524287, 2, 0, 458752, 8, 0, 458753, 3, 0, 458754, 5, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 5, 0, 458759, 5, 0 )

[node name="BuildingGrid" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 16 )
format = 1
script = ExtResource( 1 )

[node name="TileHighlight" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )

[node name="NotUI" type="Panel" parent="CanvasLayer/TabContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
__meta__ = {
"_editor_description_": "Encompasses the entire screen, but lies under the normal UI controls. Used to know whether the user's cursor is hovering over the UI or not."
}

[node name="City" type="Control" parent="CanvasLayer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="TilePosLabel" type="Label" parent="CanvasLayer/TabContainer/City"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -10.0
margin_right = 36.0
margin_bottom = 4.0

[node name="BuildingSelectPanel" type="Panel" parent="CanvasLayer/TabContainer/City"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -31.0
margin_right = 40.0
margin_bottom = 4.0
theme = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
custom_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer"]
margin_left = 10.0
margin_right = 30.0
margin_bottom = 27.0
rect_min_size = Vector2( 20, 20 )

[node name="Panel" type="Panel" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button"]
visible = false
margin_left = -87.0
margin_top = -112.5
margin_right = 106.0
margin_bottom = -18.5
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button/Panel/HBoxContainer"]
margin_right = 44.0
margin_bottom = 76.0
icon = ExtResource( 6 )

[node name="Button2" type="Button" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button/Panel/HBoxContainer"]
margin_left = 64.0
margin_right = 108.0
margin_bottom = 76.0
icon = ExtResource( 8 )

[node name="Button3" type="Button" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button/Panel/HBoxContainer"]
margin_left = 128.0
margin_right = 172.0
margin_bottom = 76.0
icon = ExtResource( 10 )

[node name="Button2" type="Button" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer"]
margin_left = 50.0
margin_right = 70.0
margin_bottom = 27.0
rect_min_size = Vector2( 20, 20 )

[node name="Panel" type="Panel" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2"]
visible = false
margin_left = -107.0
margin_top = -112.5
margin_right = 117.0
margin_bottom = -18.5
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2/Panel/HBoxContainer"]
margin_right = 62.0
margin_bottom = 73.0
icon = ExtResource( 9 )

[node name="Button2" type="Button" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2/Panel/HBoxContainer"]
margin_left = 82.0
margin_right = 144.0
margin_bottom = 73.0
icon = ExtResource( 5 )

[node name="Button3" type="Button" parent="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2/Panel/HBoxContainer"]
margin_left = 164.0
margin_right = 208.0
margin_bottom = 73.0
icon = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TabContainer/City"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -96.0
margin_right = 127.0
margin_bottom = -4.0
theme = ExtResource( 11 )

[node name="WealthPanel" type="Panel" parent="CanvasLayer/TabContainer/City/VBoxContainer"]
margin_right = 121.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="WealthLabel" type="Label" parent="CanvasLayer/TabContainer/City/VBoxContainer/WealthPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -8.5
margin_right = 100.0
margin_bottom = 8.5
text = "Wealth:"
script = ExtResource( 13 )

[node name="TurnPanel" type="Panel" parent="CanvasLayer/TabContainer/City/VBoxContainer"]
margin_top = 34.0
margin_right = 121.0
margin_bottom = 64.0
rect_min_size = Vector2( 100, 30 )
theme = ExtResource( 11 )

[node name="TurnLabel" type="Label" parent="CanvasLayer/TabContainer/City/VBoxContainer/TurnPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -8.5
margin_right = 39.0
margin_bottom = 8.5
text = "Turn: "
script = ExtResource( 12 )

[node name="NextTurnButton" type="Button" parent="CanvasLayer/TabContainer/City/VBoxContainer"]
margin_top = 68.0
margin_right = 121.0
margin_bottom = 95.0
theme = ExtResource( 11 )

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/City/VBoxContainer/NextTurnButton"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
text = "NEXT TURN"
align = 1

[node name="Tech" type="Control" parent="CanvasLayer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
theme = ExtResource( 11 )
script = ExtResource( 15 )

[node name="TechPanel" type="Panel" parent="CanvasLayer/TabContainer/Tech"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="TreeTabs" type="TabContainer" parent="CanvasLayer/TabContainer/Tech/TechPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0

[node name="Food" type="ScrollContainer" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="FoodTreePanel" type="Panel" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food"]
margin_right = 100.0
margin_bottom = 516.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food/FoodTreePanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 29.0
margin_top = -33.0
margin_right = 105.0
margin_bottom = -9.0
text = "Food"
script = ExtResource( 14 )
tooltip = "food."
cost = 100

[node name="Button2" type="Button" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food/FoodTreePanel/Button"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 139.0
margin_top = -95.5
margin_right = 224.0
margin_bottom = -68.5
disabled = true
text = "Meat tax"
script = ExtResource( 14 )
tooltip = "no more steak"
cost = 1200

[node name="Button4" type="Button" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food/FoodTreePanel/Button/Button2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 175.0
margin_top = -100.5
margin_right = 384.0
margin_bottom = -73.5
disabled = true
text = "Less steel construction"
script = ExtResource( 14 )
tooltip = "steel"
cost = 3000

[node name="Button3" type="Button" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food/FoodTreePanel/Button"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 145.0
margin_top = 57.5
margin_right = 330.0
margin_bottom = 84.5
disabled = true
text = "Upscaled local farms"
script = ExtResource( 14 )
tooltip = "farms"
cost = 700

[node name="Energy" type="Panel" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="Button" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Energy" instance=ExtResource( 16 )]
margin_left = 64.0
margin_top = -48.0
margin_right = 146.0
margin_bottom = -21.0
text = "Transport"
cost = 200

[node name="Button" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Energy/Button" instance=ExtResource( 16 )]
margin_left = 165.0
margin_top = -92.5
margin_right = 247.0
margin_bottom = -65.5
text = "Policy: Fuelless Fridays"
tooltip = "Work from home."
cost = 2000

[node name="Button" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Energy/Button/Button" instance=ExtResource( 16 )]
margin_left = 252.0
margin_top = -88.5
margin_right = 334.0
margin_bottom = -61.5
text = "No fly zone"
tooltip = "Less air travel."
cost = 3000

[node name="Button2" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Energy/Button/Button" instance=ExtResource( 16 )]
margin_left = 269.0
margin_top = 30.5
margin_right = 351.0
margin_bottom = 57.5
text = "Building: Train station"
tooltip = "idk"
cost = 5000

[node name="Button2" parent="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Energy/Button" instance=ExtResource( 16 )]
margin_left = 165.0
margin_top = 62.5
margin_right = 347.0
margin_bottom = 89.5
text = "Building: Bus terminal"
tooltip = "Buses"
cost = 1200

[node name="TooltipPanel" type="Panel" parent="CanvasLayer/TabContainer/Tech/TechPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -105.0
custom_styles/panel = SubResource( 1 )

[node name="PurchaseButton" type="Button" parent="CanvasLayer/TabContainer/Tech/TechPanel/TooltipPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -37.0
margin_right = -10.0
margin_bottom = -10.0
text = "Purchase"

[node name="Tooltip" type="Label" parent="CanvasLayer/TabContainer/Tech/TechPanel/TooltipPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 17.0
text = "No tooltip"

[connection signal="mouse_entered" from="CanvasLayer/TabContainer/NotUI" to="BuildingGrid" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TabContainer/NotUI" to="BuildingGrid" method="_on_Panel_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button" to="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button/Panel" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button/Panel/HBoxContainer/Button" to="BuildingGrid" method="_on_Button_pressed" binds= [ 12 ]]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button/Panel/HBoxContainer/Button2" to="BuildingGrid" method="_on_Button_pressed" binds= [ 13 ]]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button/Panel/HBoxContainer/Button3" to="BuildingGrid" method="_on_Button_pressed" binds= [ 14 ]]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2" to="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2/Panel" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2/Panel/HBoxContainer/Button" to="BuildingGrid" method="_on_Button_pressed" binds= [ 15 ]]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2/Panel/HBoxContainer/Button2" to="BuildingGrid" method="_on_Button_pressed" binds= [ 16 ]]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/BuildingSelectPanel/HBoxContainer/Button2/Panel/HBoxContainer/Button3" to="BuildingGrid" method="_on_Button_pressed" binds= [ 17 ]]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/VBoxContainer/NextTurnButton" to="CanvasLayer/TabContainer/City/VBoxContainer/WealthPanel/WealthLabel" method="gain_income"]
[connection signal="pressed" from="CanvasLayer/TabContainer/City/VBoxContainer/NextTurnButton" to="CanvasLayer/TabContainer/City/VBoxContainer/TurnPanel/TurnLabel" method="end_turn"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food/FoodTreePanel/Button" to="CanvasLayer/TabContainer/Tech" method="_select_tech"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food/FoodTreePanel/Button/Button2" to="CanvasLayer/TabContainer/Tech" method="_select_tech"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food/FoodTreePanel/Button/Button2/Button4" to="CanvasLayer/TabContainer/Tech" method="_select_tech"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Tech/TechPanel/TreeTabs/Food/FoodTreePanel/Button/Button3" to="CanvasLayer/TabContainer/Tech" method="_select_tech"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Tech/TechPanel/TooltipPanel/PurchaseButton" to="CanvasLayer/TabContainer/Tech" method="_purchase_tech"]
